[package]
name = "zhelezyaka"
version = "0.1.0"
authors = ["lin-k <andrew612.ru@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusqlite = "0.21.0"
log = "0.4"
log4rs = "0.11.0"
futures = "0.3"
tokio = { version = "0.2", features = ["full"] }
telegram-bot = { git = 'https://github.com/telegram-rs/telegram-bot' }